# forcingprocessor

./: .gitignore  CREDITS.md  LICENSE  README.md  STATUS.md  buildspec.yml  datastream  main.py  pyproject.toml  requirements.txt  setup.cfg  versions.yml
.github/executions/: execution_gp_arm_docker_buildNtester.json  fp_ds_test_execution_arm.json  fp_push_execution_arm.json  secret-policy.json  test_execution_gp_arm_docker_buildNtester.json
.github/workflows/: build_push_fp.yaml  build_test_fp.yaml  build_test_fp_arm.yaml  build_test_fp_arm64.yaml  build_test_fp_x86.yaml  build_test_push_docker_fp_X86_arm_version_aware.yaml  forcingprocessor_aws_sources.yaml  forcingprocessor_gcs_sources.yaml  forcingprocessor_nrds.yaml  forcingprocessor_output_opts.yaml  forcingprocessor_plotting.yaml  forcingprocessor_sources_nomads.yaml  forcingprocessor_sources_nwm_aws.yaml  forcingprocessor_sources_nwm_google.yaml  forcingprocessor_weights.yaml  integration_fp_ds_arm64.yaml  integration_fp_ds_x86.yaml  uv_test_workflow.yml
configs/: conf_fp.json
docker/: Dockerfile.forcingprocessor  Dockerfile.forcingprocessor-deps  Dockerfile.lambda_arm  README.md  docker-compose.yml  docker_loginNpush.sh
executions/: execution_gp_arm_docker_buildNtester.json  test_execution_gp_arm_docker_buildNtester.json
forcingprocessor/: setup.cfg
stepfunction-logs-74/: stepfunction-execution-details.json  stepfunction-execution-history.json
tests/: conftest.py  test_channelrouting.py  test_forcingprocessor.py  test_hf2ds.py  test_nrds_fp.py  test_plotter.py  test_trouterestarts.py
(+24 files in other folders)
